# dtool-s3

./: .gitignore  CHANGELOG.rst  README.rst  TESTING_CONFIG.rst  pyproject.toml  setup.cfg  setup.py
dtool_s3/: __init__.py  storagebroker.py
parse_logs/: .gitignore  create_gantt_plot.R  create_plots.R  create_time_vs_size_plot.R  download_logs_to_gantt_csv.py  logs_to_csv.py  logs_to_gantt_csv.py  sum_md5_and_upload_times.R  sum_md5_time.R
remove_dataset/: remove_dataset.py
tests/: __init__.py  test_creation_and_reading_functional.py  test_functional.py  test_httpenable.py  test_prefix_for_storage_location_functional.py  test_put_item_logic.py  test_self_description.py  test_stuff.py
